tests/baselines/reference/getterMissingReturnError.errors.txt
==== tests/cases/compiler/getterMissingReturnError.ts (2 errors) ====
    class test {
        public get p2(){
                   ~~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
                   ~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
    
        }
    }
    